add post in sinatra

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,12 @@
 <h1>Welcome to MMORPS</h1>
-<p>
-  <a href="#">Hellooooooooo</a>
-</p>
+
+<ul>
+  <li>Player Score:</li>
+  <li>Computer Score:</li>
+</ul>
+<form action="/" method="post">
+  <input type="radio" name="rps" value="r"> Rock
+  <input type="radio" name="rps" value="p"> Paper
+  <input type="radio" name="rps" value="s"> Scissors
+  <input type="submit" value="Go!">
+</form>
