--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,7 +13,7 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="column">
+        <div class="main small-10 small-centered columns">
           <%= yield %>
         </div>
       </div>
